# pc-boxscores

./: .dockerignore  .gcloudignore  .gitignore  Dockerfile  README.md  TODO  analyze-stdin.py  deploy.sh  ensure_trigger.sh  main.py  pyproject.toml  repository-cleanup-policy.json  requirements-snapshot.txt  requirements.txt  start.py  testing.md
lib/: analyze.py  pcweb.py
new-games-to-db/: .dockerignore  .gcloudignore  Dockerfile  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  start.py
old/lib/: parse-career-leaders.py  parse-retired.py  read_firestore.py  records.py
store-in-gcs/: .dockerignore  Dockerfile  NOTES  deploy.sh  ensure_trigger.sh  fake-event.py  main.py  pyproject.toml  requirements.txt  strict.txt
