[project]
name = "store-in-gcs"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudevents>=1.12.1,<2.0.0",
    "flask>=3.1.3",
    "google-cloud-storage>=3.10.1",
    "google-events>=0.14.0",
    "gunicorn>=26.0.0",
    "requests>=2.34.2",
]
[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
  "--strict-markers",
]

[tool.pyright]
typeCheckingMode = "recommended"
reportUnannotatedClassAttribute = false
stubPath = "./stubs"
ignore = ["stubs/**"]

[tool.ruff]
exclude = ["stubs/"]

[tool.ruff.lint]

select = [
  "ALL",
]

ignore = [
  "COM812", # missing-trailing-comma -- let the formatter deal with it
  "D100",   # undocumented-public-module
  "D101",   # undocumented-public-class
  "D103",   # undocumented-public-function
  "D104",   # undocumented-public-package
  "D203",   # incorrect-blank-line-before-class
  "D213",   # multi-line-summary-second-line
  "DTZ007", # Naive datetime constructed using `datetime.datetime.strptime()` without %z
  "ERA001", # Commented out code
  "FIX002", # line-contains-todo
  "SLF001", # Private member accessed -- handled by basedpyright
  "T201",   # print
  "T203",   # pprint
  "TC006",  # runtime-cast-value
  "TD002",  # missing-todo-author
  "TD003",  # missing-todo-link
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = ["D", "PLR2004", "S101"]

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
lines-after-imports = 2
